warehouse-app/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-app
  namespace: wms-proto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: warehouse-app
  template:
    metadata:
      labels:
        app: warehouse-app
    spec:
      imagePullSecrets:
        - name: nexus-docker-creds
      containers:
        - name: warehouse-app
          image: 10.96.191.117:8082/warehouse-app:jenkins-15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/warehouse/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/warehouse/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 180
            periodSeconds: 10
