warehouse-app/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-postgres
  namespace: wms-proto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse-postgres
  template:
    metadata:
      labels:
        app: warehouse-postgres
    spec:
      imagePullSecrets:
        - name: nexus-docker-creds
      volumes:
        - name: init-databases
          configMap:
            name: warehouse-postgres-init
            defaultMode: 0755
      containers:
        - name: postgres
          image: mfomichev/postgres:12.8-alpine-partman
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-databases
              mountPath: /docker-entrypoint-initdb.d
