warehouse-app/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-app
  namespace: wms-proto
spec:
  selector:
    app: warehouse-app
  ports:
    - name: http
      port: 8081
      targetPort: 8081
