warehouse-app/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-kafka
  namespace: wms-proto
spec:
  selector:
    app: warehouse-kafka
  ports:
    - name: kafka
      port: 9094
      targetPort: 9094
