warehouse-app/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-postgres
  namespace: wms-proto
spec:
  selector:
    app: warehouse-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
